--- a/src/plugins/finalcutpro/toolbox/fcpxmltitles/html/panel.html
+++ b/src/plugins/finalcutpro/toolbox/fcpxmltitles/html/panel.html
@@ -1,5 +1,21 @@
 <style>{(css/fcpxmltitles.css)}</style>
 <style>
+	#dropbox {
+		width: 90%;
+		padding: 5px 5px;
+		margin: 8px 0;
+		box-sizing: border-box;
+		border: 4px solid #22426f;
+		border-radius: 4px;
+		background-color: black;
+		text-align:center;
+		resize: none;
+		height: 30px;
+		overflow:hidden;
+		color: transparent;
+	    text-shadow: 0px 0px 0px tomato;
+	}
+
 	.editor {
 		margin-left: 20px;
 		margin-top: 13px;
@@ -110,10 +126,30 @@
 			alertErrorMessage(err);
 		}
 	}
+
+	function dropboxAction(){
+		if (document.getElementById("dropbox") != null) {
+			try {
+				var result = {
+					id: "fcpxmlTitlesPanelCallback",
+					params: {
+						type: "dropbox",
+						value: document.getElementById("dropbox").value,
+					},
+				}
+				postMessage(result);
+			} catch(err) {
+				alertErrorMessage(err);
+			}
+			document.getElementById("dropbox").value = "";
+		}
+	}
 </script>
 <h3 class="uiItem">{{ i18n("fcpxmlTitlesProcessor") }}</h3>
 <p class="uiItem">{{ i18n("fcpxmlTitlesProcessorDescriptionLineOne") }}</p>
 <p class="uiItem">{{ i18n("fcpxmlTitlesProcessorDescriptionLineTwo") }}</p>
+<br />
+<p class="uiItem">{{ i18n("fcpxmlTitlesProcessorDescriptionLineThree") }}</p>
 <table>
 	<tr>
 		<th style="height: 10px;"></th>
@@ -128,6 +164,19 @@
 		</th>
 		<th>
 			<a href="#" class="bottomButton" onclick="pressButton('reset')">{{ i18n("reset") }}</a>
+		</th>
+	</tr>
+</table>
+
+<table width="100%">
+	<tr>
+		<th style="height: 10px;"></th>
+	</tr>
+	<tr>
+		<th style="width: 100%;">
+			<form>
+				<textarea type="text" id="dropbox" name="dropbox" oninput="dropboxAction()" tabindex="-1" placeholder="{{ string.upper(i18n("shotDataDropZone")) }}"></textarea>
+			</form>
 		</th>
 	</tr>
 </table>
